# opengl-learning-cmake

./: .gitignore
opengl-learning/: CMakeLists.txt  main.cpp
opengl-learning/camera/: CMakeLists.txt  camera.cpp  camera.h
opengl-learning/glsl/: fragment.glsl
opengl-learning/shader/: CMakeLists.txt  shader.cpp  shader.h
opengl-light-learning/: CMakeLists.txt
opengl-light-learning/glsl/: light_fragment.glsl  obj_fragment.glsl  vertex.glsl
opengl-light-learning/lib/: CMakeLists.txt
opengl-light-learning/lib/camera/: CMakeLists.txt  camera.cpp  camera.h
opengl-light-learning/lib/shader/: shader.cpp  shader.h
opengl-light-learning/src/: CMakeLists.txt  main.cpp
